2001-07-06  Peter Stephenson  <pws@csr.com>

	* Back out 15266: it was right before, I was looking at it
	back to front.

2001-07-06  Bart Schaefer  <schaefer@zsh.org>

	* 15271: Src/Modules/pcre.mdd: Default to dynamic linkage only, as
	the pcre library is unlikely to be available.

2001-07-06  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 15266: Src/glob.c, Doc/Zsh/expn.yo: ${(S)...%%...} matches
	were wrong; try desperately to explain that in ${(SI:...:)...%%...}
	and ${(SI:...:)...%...} indices count matches finishing
	progressively earlier in the string.

2001-07-05  Peter Stephenson  <pws@csr.com>

	* 15264: Doc/Zsh/grammar.yo: improve description of use of
	variant complex command forms to avoid confusing the present
	writer.

	* 15261: Test/E01options.ztst, Test/ztst.zsh: remaining easy
	option tests.

2001-07-05  Andrej Borsenkow  <bor@zsh.org>

	* 15253 : Src/hashtable.c: make hashdir() hash foo in addition
	to foo.exe on Cygwin again (lost when Cygwin gcc stopped setting
	_WIN32 by default).

2001-07-03  Clint Adams  <clint@zsh.org>

	* 15242: Doc/Zsh/mod_pcre.yo, Src/Modules/pcre.c: set $match
	instead of pparams.  pcre_match -a sets specified array instead of
	$match.

	* 15234: Doc/Zsh/mod_pcre.yo: describe behavior introduced by
	15228.

	* 15228: zshconfig.ac, Src/Modules/pcre.c: switch AC_CHECK_LIB to
	AC_SEARCH_LIBS for pcre.  Have pcre_match set positional
	parameters with the contents of capture buffers.

2001-07-03  Clint Adams  <clint@zsh.org>

	* unposted: Doc/Makefile.in: add mod_pcre.yo to makefile.

2001-07-03  Oliver Kiddle  <opk@zsh.org>

	* 15223, Akinori Musha: 15215: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_sysctl: Add completion for sysctl(8)

2001-07-03  Clint Adams  <clint@zsh.org>

	* unposted: Doc/Zsh/.distfiles, Functions/Example/.distfiles,
	Src/Modules/.distfiles: update distfiles for 15211.

2001-07-02  Bart Schaefer  <schaefer@zsh.org>

	* unposted: zshconfig.ac: Remove references to FUNCINST_MK.
